Corrigindo Tema, Add Componente Body Gradient e Alterando Páginas

--- a/lib/languages/intl_pt.arb
+++ b/lib/languages/intl_pt.arb
@@ -1,5 +1,6 @@
 {
   "@@locale": "pt",
   "error" : "Erro",
-  "tryAgain" : "Tente Novamente"
+  "tryAgain" : "Tente Novamente",
+  "signIn" : "Entrar"
 }
