--- a/lib/languages/intl_en.arb
+++ b/lib/languages/intl_en.arb
@@ -3,9 +3,12 @@
   "error" : "Error",
   "tryAgain" : "Try Again",
   "signIn" : "Sign In",
+  "signUp" : "Sign Up",
   "privacyPolicy" : "Privacy Policy",
   "user" : "User",
   "password" : "Password",
   "validatorIsEmpty" : "Required field.",
-  "validatorPassMin" : "The password must contain more than one character."
+  "validatorPassMin" : "The password must contain more than one character.",
+  "invalidUserOrPass" : "Invalid user or password.",
+  "errorAuthentication" : "Authentication error."
 }
